# bird-xai

./: .gitignore  README.md
contracts/: README.md
data/: README.md
idea/: idea.md  implementation.md
model/: README.md
model/xai/demo/: README.md  arch.py  data.py  model_loader.py  pyproject.toml  run_all.py
model/xai/demo/loaders/: load_cnn.py  load_diffusion.py  load_gan.py
model/xai/demo/train/: train_cnn.py  train_diffusion.py  train_gan.py
model/xai/demo/viz/: 01_cnn_filters.py  02_gradient_attribution.py  03_perturbation.py  04_embedding.py  05_gan.py  06_diffusion.py  07_shap.py
render/: README.md  code-review-story
server/: README.md
