[project]
name = "xai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "diffusers>=0.37.1",
    "huggingface-hub>=1.9.2",
    "jupyterlab>=4.5.6",
    "keras>=3.14.0",
    "lime>=0.2.0.1",
    "tensorflow>=2.21.0",
    "umap-learn>=0.5.12",
    "shap>=0.46.0",
]
